--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -13,7 +13,12 @@ title=UI5 Demo App
 #Hello Text
 showHelloButtonText=Say Hello
 helloMsg=Hello {0}
+helloDialogText=Welcome to this UI5 App
+dialogCloseButtonText=Ok
 
 # SalesDocList
 salesDocTitle=Sales Docs
 salesDocsListTitle=Sales Doc List
+
+#Sales Doc Detail Page
+detailPageTitel=Sales Doc Detail Page
