--- a/webapp/i18n/i18n_de.properties
+++ b/webapp/i18n/i18n_de.properties
@@ -13,8 +13,13 @@ title=UI5 Demo App
 
 # Hello Text
 showHelloButtonText=Sag Hallo
-helloMsg=Moin {0} 
+helloMsg=Moin {0}
+helloDialogText=Willkommen in dieser Ui5 Demo Anwendung!
+dialogCloseButtonText=Okay
 
 # SalesDocList
 salesDocTitle=Verkaufsbelege
 salesDocsListTitle=Verkaufsbeleg Liste
+
+#Sales Doc Detail Page
+detailPageTitel=Verkaufsbeleg Detail Seite
